tests/compile_fail/ktstr_test_min_llcs_exceeds_max.rs
use ktstr::ktstr_test;

#[ktstr_test(min_llcs = 8, max_llcs = 4)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
