tests/compile_fail/ktstr_test_min_llcs_exceeds_max.stderr
error: min_llcs (8) exceeds max_llcs (4). Set max_llcs explicitly.
 --> tests/compile_fail/ktstr_test_min_llcs_exceeds_max.rs:3:1
  |
3 | #[ktstr_test(min_llcs = 8, max_llcs = 4)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)
